<resources>
    <string name="app_name">Birthday Application</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="gifts">Gifts</string>
    <string name="good_morning">Good morning!</string>
    <string name="add_upcoming_birthdays">Add upcoming birthdays</string>
    <string name="ola_machiavelli">Ola Machiavelli</string>
    <string name="_20_10_2020">20.10.2020</string>
    <string name="_30_days_left">30 days left</string>
    <string name="search_for_celebrants">Search for celebrants…</string>
    <string name="upcoming_birthdays">Upcoming Birthdays</string>
    <string name="yaay">yaay!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_gifts_page">Welcome To The Gifts Page</string>
    <string name="heart_icon_1">Heart icon 1</string>
    <string name="heart_icon_2">Heart icon 2</string>
    <string name="heart_icon_1b">Heart icon 1b</string>
    <string name="heart_icon_3">Heart icon 3</string>
    <string name="notification_badge">Notification badge</string>
    <string name="notification_bell">Notification bell</string>
    <string name="search_icon">Search icon</string>
    <string name="profile_picture">Profile picture</string>
    <string name="vertical_bar">Vertical bar</string>
    <string name="cake_icon">Cake icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="slider_image">Slider image</string>
    <string name="call_icon">Call icon</string>
    <string name="message_icon">Message icon</string>
    <string name="top_of_message_icon">Top of message icon</string>
    <string name="share_icon">Share icon</string>
    <string name="pen_icon">Pen icon</string>
    <string name="horizontal_rule_below_pen_icon">Horizontal rule below pen icon</string>
    <string name="celebration_icon">Celebration icon</string>
</resources>